[package]
name = "rust-test-helper"
version = "0.1.0"
authors = ["futpib <futpib@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.2", features = ["serde"] }
serde_json = "1.0"
clap = { version = "3.0.14", features = ["derive"] }
